# webcam-reader

./: README.md  logger.py  main.py  pyproject.toml
