[tool.poetry]
name = "webcam-reader"
version = "1.0.0"
description = ""
authors = ["Marco Cardoso"]

[tool.poetry.dependencies]
python = "^3.9"

opencv-python = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
